add storage permission

--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
   // },
   
   // Optional
-  "permissions": ["contextMenus", "notifications", "tabs"],
+  "permissions": ["contextMenus", "notifications", "tabs", "storage"],
   "background": {
     "scripts": ["scripts/context.js"],
     // Recommended
